--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <h1>Updated the code</h1>
     <button onclick="clickMe()">Click me!</button>
     <script src="scripts.js"></script>
 </body>
